deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-demo
  template:
    metadata:
      labels:
        app: ingress-demo
    spec:
      containers:
        - name: ingress-demo
          image: gcr.io/google-samples/hello-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-demo
spec:
  type: NodePort
  selector:
    app: ingress-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
