hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-demo
spec:
  selector:
    matchLabels:
      run: hpa-demo
  replicas: 1
  template:
    metadata:
      labels:
        run: hpa-demo
    spec:
      containers:
        - name: hpa-demo
          image: k8s.gcr.io/hpa-example
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 200m
            requests:
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: hpa-demo
  labels:
    run: hpa-demo
spec:
  ports:
    - port: 80
  selector:
    run: hpa-demo
